--- a/pandas.ipynb
+++ b/pandas.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "id": "debeed2b",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 19,
    "id": "fda31d64",
    "metadata": {},
    "outputs": [
@@ -42,31 +42,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "     Index   Height(Inches)\"   \"Weight(Pounds)\"\n",
-      "0        1             65.78             112.99\n",
-      "1        2             71.52             136.49\n",
-      "2        3             69.40             153.03\n",
-      "3        4             68.22             142.34\n",
-      "4        5             67.79             144.30\n",
-      "..     ...               ...                ...\n",
-      "195    196             65.80             120.84\n",
-      "196    197             66.11             115.78\n",
-      "197    198             68.24             128.30\n",
-      "198    199             68.02             127.47\n",
-      "199    200             71.39             127.88\n",
-      "\n",
-      "[200 rows x 3 columns]\n"
+      "   Index   Height(Inches)\"   \"Weight(Pounds)\"\n",
+      "0      1             65.78             112.99\n",
+      "1      2             71.52             136.49\n",
+      "2      3             69.40             153.03\n",
+      "3      4             68.22             142.34\n",
+      "4      5             67.79             144.30\n"
      ]
     }
    ],
    "source": [
-    "df = pd.read_csv(\"hw_200.csv\")\n",
-    "print(df)"
+    "df = pd.read_csv(\"hw_200.csv\",encoding=\"latin-1\")\n",
+    "print(df.head())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "2dc0db38",
    "metadata": {},
    "outputs": [
@@ -86,6 +78,104 @@
    "source": [
     "df = pd.read_excel(\"sample_data.xlsx\")\n",
     "print(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "8abf498b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   id   name  age       city  score\n",
+      "0   1    Avi   23      Delhi   88.5\n",
+      "1   2   Neha   25     Mumbai   92.0\n",
+      "2   3   Ravi   22  Bangalore   79.0\n",
+      "3   4  Sonia   24    Chennai   85.0\n",
+      "4   5  Karan   21       Pune   91.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.read_json(\"pandas_sample.json\")\n",
+    "print(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "c9117393",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    Name  age         city\n",
+      "0    avi   20     palanpur\n",
+      "1     ak   30  gandhinagar\n",
+      "2  devil   40    ahmedabad\n"
+     ]
+    }
+   ],
+   "source": [
+    "students_data = {\n",
+    "    \"Name\":[\"avi\",\"ak\",\"devil\"],\n",
+    "    \"age\":[20,30,40],\n",
+    "    \"city\":[\"palanpur\",\"gandhinagar\",\"ahmedabad\"]\n",
+    "}\n",
+    "\n",
+    "df = pd.DataFrame(students_data)\n",
+    "print(df)\n",
+    "df.to_csv(\"output.csv\",index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "73e257fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    Name  age         city\n",
+      "0    avi   20     palanpur\n",
+      "1     ak   30  gandhinagar\n",
+      "2  devil   40    ahmedabad\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame(students_data)\n",
+    "print(df)\n",
+    "df.to_excel(\"output.xlsx\",index=False)\n",
+    "df.to_json(\"output.json\",index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "08cdac1f",
+   "metadata": {},
+   "source": [
+    "# steps in dataset to perform:\n",
+    "1. understand the data\n",
+    "2. identify the problem\n",
+    "3. plan the next step"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "51d6b69a",
+   "metadata": {},
+   "source": [
+    "1. to check first 5 entries from top .head(n) is used\n",
+    "2. to check first 5 entries from end .tail(n) is used\n",
+    "3. here by default value of n(int value must) is 5"
    ]
   }
  ],
