all changes are made

--- a/pandas.ipynb
+++ b/pandas.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "debeed2b",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "id": "fda31d64",
    "metadata": {},
    "outputs": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "2dc0db38",
    "metadata": {},
    "outputs": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "8abf498b",
    "metadata": {},
    "outputs": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "c9117393",
    "metadata": {},
    "outputs": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "73e257fd",
    "metadata": {},
    "outputs": [
@@ -176,6 +176,266 @@
     "1. to check first 5 entries from top .head(n) is used\n",
     "2. to check first 5 entries from end .tail(n) is used\n",
     "3. here by default value of n(int value must) is 5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6944630f",
+   "metadata": {},
+   "source": [
+    "# .info method is used to get the information about the data like\n",
+    "1. columns, rows\n",
+    "2. columns name\n",
+    "3. datatypes\n",
+    "4. memory usage"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "b28deaa7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 3 entries, 0 to 2\n",
+      "Data columns (total 3 columns):\n",
+      " #   Column  Non-Null Count  Dtype \n",
+      "---  ------  --------------  ----- \n",
+      " 0   Name    3 non-null      object\n",
+      " 1   age     3 non-null      int64 \n",
+      " 2   city    3 non-null      object\n",
+      "dtypes: int64(1), object(2)\n",
+      "memory usage: 204.0+ bytes\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "students_data2 = {\n",
+    "    \"Name\":[\"avi\",\"ak\",\"devil\"],\n",
+    "    \"age\":[20,30,40],\n",
+    "    \"city\":[\"palanpur\",\"gandhinagar\",\"ahmedabad\"]\n",
+    "}\n",
+    "\n",
+    "df = pd.DataFrame(students_data2)\n",
+    "print(df.info())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "15224bcd",
+   "metadata": {},
+   "source": [
+    "# .describe method is used to gain details of data like mean,std,max and all"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "dbaeb349",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             age        salary  performance_score\n",
+      "count   8.000000      8.000000           8.000000\n",
+      "mean   29.125000  58250.000000          82.375000\n",
+      "std     3.681518   8172.252706           8.765802\n",
+      "min    24.000000  48000.000000          69.000000\n",
+      "25%    26.750000  52250.000000          75.500000\n",
+      "50%    28.500000  57500.000000          83.500000\n",
+      "75%    31.500000  63250.000000          88.750000\n",
+      "max    35.000000  71000.000000          94.000000\n"
+     ]
+    }
+   ],
+   "source": [
+    "employees_data = {\n",
+    "    \"name\": [\"Aarav\", \"Bhavya\", \"Chetan\", \"Divya\", \"Eshan\", \"Farah\", \"Gautam\", \"Hina\"],\n",
+    "    \"age\": [28, 31, 24, 29, 26, 35, 33, 27],\n",
+    "    \"salary\": [55000, 60000, 48000, 62000, 53000, 71000, 67000, 50000],\n",
+    "    \"performance_score\": [82, 76, 91, 88, 69, 94, 85, 74]\n",
+    "}\n",
+    "\n",
+    "df = pd.DataFrame(employees_data)\n",
+    "print(df.describe())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "952367f2",
+   "metadata": {},
+   "source": [
+    "# we can access shape by .shape which includes (rows,columns) and .columns to get columns names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "e857e1ea",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     name  age  salary  performance_score\n",
+      "0   Aarav   28   55000                 82\n",
+      "1  Bhavya   31   60000                 76\n",
+      "2  Chetan   24   48000                 91\n",
+      "3   Divya   29   62000                 88\n",
+      "4   Eshan   26   53000                 69\n",
+      "5   Farah   35   71000                 94\n",
+      "6  Gautam   33   67000                 85\n",
+      "7    Hina   27   50000                 74\n",
+      "shape of it (8, 4)\n",
+      "columns name Index(['name', 'age', 'salary', 'performance_score'], dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "employees_data2 = {\n",
+    "    \"name\": [\"Aarav\", \"Bhavya\", \"Chetan\", \"Divya\", \"Eshan\", \"Farah\", \"Gautam\", \"Hina\"],\n",
+    "    \"age\": [28, 31, 24, 29, 26, 35, 33, 27],\n",
+    "    \"salary\": [55000, 60000, 48000, 62000, 53000, 71000, 67000, 50000],\n",
+    "    \"performance_score\": [82, 76, 91, 88, 69, 94, 85, 74]\n",
+    "}\n",
+    "\n",
+    "df = pd.DataFrame(employees_data2)\n",
+    "print(df)\n",
+    "print(f'shape of it {df.shape}')\n",
+    "print(f'columns name {df.columns}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "431f4287",
+   "metadata": {},
+   "source": [
+    "# to select columns\n",
+    "1. for single columns return series\n",
+    "2. for multiple columns return dataframe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dab841ff",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sample dataset\n",
+      "     name  age  salary  performance_score\n",
+      "0   Aarav   28   55000                 82\n",
+      "1  Bhavya   31   60000                 76\n",
+      "2  Chetan   24   48000                 91\n",
+      "3   Divya   29   62000                 88\n",
+      "4   Eshan   26   53000                 69\n",
+      "5   Farah   35   71000                 94\n",
+      "6  Gautam   33   67000                 85\n",
+      "7    Hina   27   50000                 74\n",
+      "selecting single Name column\n",
+      "0     Aarav\n",
+      "1    Bhavya\n",
+      "2    Chetan\n",
+      "3     Divya\n",
+      "4     Eshan\n",
+      "5     Farah\n",
+      "6    Gautam\n",
+      "7      Hina\n",
+      "Name: name, dtype: object\n",
+      "selecting multiple Name, Age column\n",
+      "     name  age\n",
+      "0   Aarav   28\n",
+      "1  Bhavya   31\n",
+      "2  Chetan   24\n",
+      "3   Divya   29\n",
+      "4   Eshan   26\n",
+      "5   Farah   35\n",
+      "6  Gautam   33\n",
+      "7    Hina   27\n"
+     ]
+    }
+   ],
+   "source": [
+    "employees_data3 = {\n",
+    "    \"name\": [\"Aarav\", \"Bhavya\", \"Chetan\", \"Divya\", \"Eshan\", \"Farah\", \"Gautam\", \"Hina\"],\n",
+    "    \"age\": [28, 31, 24, 29, 26, 35, 33, 27],\n",
+    "    \"salary\": [55000, 60000, 48000, 62000, 53000, 71000, 67000, 50000],\n",
+    "    \"performance_score\": [82, 76, 91, 88, 69, 94, 85, 74]\n",
+    "}\n",
+    "\n",
+    "df = pd.DataFrame(employees_data3)\n",
+    "print(\"sample dataset\")\n",
+    "print(df)\n",
+    "print('selecting single Name column')\n",
+    "print(df[\"name\"]) # for single columns\n",
+    "print('selecting multiple Name, Age column')\n",
+    "print(df[[\"name\",\"age\"]]) # for multiple columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "e741798a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sample dataset\n",
+      "     name  age  salary  performance_score\n",
+      "0   Aarav   28   55000                 82\n",
+      "1  Bhavya   31   60000                 76\n",
+      "3   Divya   29   62000                 88\n",
+      "4   Eshan   26   53000                 69\n",
+      "5   Farah   35   71000                 94\n",
+      "6  Gautam   33   67000                 85\n",
+      "\n",
+      "age is 20 plus and salary is 60,000\n",
+      "     name  age  salary  performance_score\n",
+      "3   Divya   29   62000                 88\n",
+      "5   Farah   35   71000                 94\n",
+      "6  Gautam   33   67000                 85\n",
+      "\n",
+      "age is 30 plus or performance_score > 90\n",
+      "     name  age  salary  performance_score\n",
+      "1  Bhavya   31   60000                 76\n",
+      "2  Chetan   24   48000                 91\n",
+      "5   Farah   35   71000                 94\n",
+      "6  Gautam   33   67000                 85\n"
+     ]
+    }
+   ],
+   "source": [
+    "employees_data4 = {\n",
+    "    \"name\": [\"Aarav\", \"Bhavya\", \"Chetan\", \"Divya\", \"Eshan\", \"Farah\", \"Gautam\", \"Hina\"],\n",
+    "    \"age\": [28, 31, 24, 29, 26, 35, 33, 27],\n",
+    "    \"salary\": [55000, 60000, 48000, 62000, 53000, 71000, 67000, 50000],\n",
+    "    \"performance_score\": [82, 76, 91, 88, 69, 94, 85, 74]\n",
+    "}\n",
+    "\n",
+    "df = pd.DataFrame(employees_data4)\n",
+    "print(\"sample dataset\")\n",
+    "print(df[df['salary']>50000]) # based on the condition extracting data\n",
+    "\n",
+    "# age is 20 plus and salary is 60,000 plus\n",
+    "print(\"\\nage is 20 plus and salary is 60,000\")\n",
+    "print(df[(df[\"age\"]>20) & (df[\"salary\"]>60000)])\n",
+    "\n",
+    "# age is 30 plus or performance_score > 90\n",
+    "print(\"\\nage is 30 plus or performance_score > 90\")\n",
+    "print(df[(df[\"age\"] > 30) | (df[\"performance_score\"] > 90)])"
    ]
   }
  ],
